--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: auto_http_request
 description: A package for making API calls and parsing responses into a generic data model.
 homepage: https://github.com/mufassalhussain/auto_http_request
-version: 0.0.5
+version: 0.0.5+1
 environment:
   sdk: ">=2.15.1 <3.0.0"
 dependencies:
